kubernetes/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaccine
  labels:
    app: vaccine
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaccine
  template:
    metadata:
      labels:
        app: vaccine
    spec:
      containers:
        - name: vaccine
          image: anticorona.azurecr.io/vaccine:latest
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 10
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 10
          livenessProbe:
            httpGet:
              path: '/actuator/health'
              port: 8080
            initialDelaySeconds: 120
            timeoutSeconds: 2
            periodSeconds: 5
            failureThreshold: 5
          resources:
                requests:
                  cpu: 100m
                  memory: 128Mi
                limits:
                  cpu: 250m
                  memory: 256Mi
          volumeMounts:
            - name: volume
              mountPath: "/mnt/azure"
      volumes:
      - name: volume
        persistentVolumeClaim:
          claimName: vaccine-disk
