kubernetes/vaccine-istio.yml
  apiVersion: networking.istio.io/v1alpha3
  kind: VirtualService
  metadata:
    name: vs-vaccine-network-rule
    namespace: anticorona
  spec:
    hosts:
    - vaccine
    http:
    - route:
      - destination:
          host: vaccine
      timeout: 3s
